objects/Lead_Current_Contitions_Rule__mdt.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Conditions__c</fullName>
        <description>Example format: Is_there_Co_App__c == true &amp;&amp; Self_Employed_co__c == true</description>
        <inlineHelpText>Example format: Is_there_Co_App__c == true &amp;&amp; Self_Employed_co__c == true</inlineHelpText>
        <label>Other Conditions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HomeOwner</fullName>
                    <default>true</default>
                    <label>HomeOwner</label>
                </value>
                <value>
                    <fullName>HomeBuyer</fullName>
                </value>
                <value>
                    <fullName>HomeBuyer Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lead - Current Contitions Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>Record_Type__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>Other_Conditions__c</columns>
        <columns>Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Lead - Current Contitions Rules</pluralLabel>
</CustomObject>